--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "yarn run build"
   },
   "engines": {
-    "node": "16.0",
+    "node": "16.13.2",
     "yarn": "1.22.19"
   },
   "eslintConfig": {
